kubernetes/admin-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: admin-server
  name: admin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: admin-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: admin-server
    spec:
      containers:
      - env:
        - name: EUREKA_DISCOVERY_SERVICE_HOSTNAME
          value: eureka-discovery-service
        image: mariobros/admin-server:0.0.1-SNAPSHOT
        imagePullPolicy: ""
        name: admin-server
        ports:
        - containerPort: 9000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
