kubernetes/react-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: react-client
  name: react-client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: react-client
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: react-client
    spec:
      containers:
      - image: mariobros/react-client:0.0.1-SNAPSHOT
        imagePullPolicy: ""
        name: react-client
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
