kubernetes/angular-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: angular-client
  name: angular-client
spec:
  type: NodePort
  ports:
  - name: "81"
    port: 81
    targetPort: 80
  selector:
    io.kompose.service: angular-client
status:
  loadBalancer: {}
