kubernetes/react-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: react-client
  name: react-client
spec:
  type: NodePort
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: react-client
status:
  loadBalancer: {}
